--- a/src/App.scss
+++ b/src/App.scss
@@ -106,6 +106,13 @@
     min-height: 100vh;
     z-index: 2;
 }
+.noDisplay{
+    position: absolute !important;
+    height: 1px; width: 1px; 
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+}
 @media screen and (max-width:1200px) {
     .section{
         padding: 30px 0 30px 16.66%; 
