--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ code {
     padding: 0;
     box-sizing: border-box;
 }
-@media screen and (min-width:1700px) {
+/* @media screen and (min-width:1700px) {
     #root{
         max-width: 1700px;
         left: 50%;
@@ -57,4 +57,4 @@ code {
         border-right: 1px solid var(--line);
         border-left: 1px solid var(--line);
     }    
-}
+} */
